--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
         "axios": "^0.18.0",
         "egg": "^2.6.1",
         "egg-scripts": "^2.6.0",
-        "moment": "^2.24.0",
-        "mongodb": "^3.5.7"
+        "moment": "^2.24.0"
     },
     "devDependencies": {
         "@types/mocha": "^2.2.40",
-        "@types/mongodb": "^3.5.18",
         "@types/node": "^7.0.12",
         "@types/supertest": "^2.0.0",
         "@types/yargs": "^13.0.0",
