--- a/k8s/package.json
+++ b/k8s/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "wb-msg",
+    "name": "s-url",
     "version": "1.0.0",
     "scripts": {
         "start": "egg-scripts start --port 8000"
