--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "wb-msg",
+    "name": "s-url",
     "version": "1.0.0",
-    "description": "wechat component proxy",
+    "description": "short url svc",
     "private": true,
     "egg": {
         "typescript": true,
@@ -24,24 +24,24 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
-        "egg": "^2.6.1",
-        "egg-scripts": "^2.6.0",
-        "moment": "^2.24.0"
+        "egg": "^2.26.1",
+        "egg-scripts": "^2.13.0",
+        "moment": "^2.26.0"
     },
     "devDependencies": {
         "@types/mocha": "^2.2.40",
-        "@types/node": "^7.0.12",
-        "@types/supertest": "^2.0.0",
-        "@types/yargs": "^13.0.0",
+        "@types/node": "^7.10.11",
+        "@types/supertest": "^2.0.9",
+        "@types/yargs": "^13.0.9",
         "autod": "^3.0.1",
         "autod-egg": "^1.1.0",
         "egg-bin": "^4.11.0",
-        "egg-ci": "^1.8.0",
+        "egg-ci": "^1.15.0",
         "egg-mock": "^3.16.0",
-        "tslib": "^1.9.0",
+        "tslib": "^1.13.0",
         "tslint": "^5.0.0",
         "tslint-config-egg": "^1.0.0",
-        "typescript": "^3.4.0"
+        "typescript": "^3.4.5"
     },
     "engines": {
         "node": ">=10.10.0"
